--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/cadastro.css')}}">
     <title>Cadastro</title>
 </head>
 <body>
-    <h1>Cadastro</h1>
-    <form method="POST" action="/cadastro">
-        <label for="nome">Nome:</label><br>
-        <input type="text" id="nome" name="nome"><br>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br>
-        <label for="senha">Senha:</label><br>
-        <input type="password" id="senha" name="senha"><br><br>
-        <input type="submit" value="Cadastrar">
-    </form>
-    <br>
-    <a href="{{ url_for('login') }}">Já possui uma conta? Faça login aqui.</a>
+    <div class="main">
+        <h1>Cadastro</h1>
+        <div class="content">
+            <form method="POST" action="/cadastro">
+                <label for="nome">Nome:</label><br>
+                <input type="text" id="nome" name="nome"><br>
+                <label for="email">Email:</label><br>
+                <input type="text" id="email" name="email"><br>
+                <label for="senha">Senha:</label><br>
+                <input type="password" id="senha" name="senha"><br><br>
+                <input type="submit" value="Cadastrar" id="enviar">
+            </form>
+            <br>
+            <a href="{{ url_for('login') }}">Já possui uma conta? Faça login aqui.</a>
+        </div>
+    </div>
 </body>
 </html>
