--- a/templates/login.html
+++ b/templates/login.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css')}}">
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
-    {% if mensagem %}
-        <p>{{ mensagem }}</p>
-    {% endif %}
-    <form method="POST" action="/login">
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br>
-        <label for="senha">Senha:</label><br>
-        <input type="password" id="senha" name="senha"><br><br>
-        <input type="submit" value="Entrar">
-    </form>
+    <div class="main">
+        <h1>Login</h1>
+        {% if mensagem %}
+            <p>{{ mensagem }}</p>
+        {% endif %}
+        <div class="content">
+            <form method="POST" action="/login">
+                <label for="email">Email:</label><br>
+                <input type="text" id="email" name="email"><br>
+                <label for="senha">Senha:</label><br>
+                <input type="password" id="senha" name="senha"><br><br>
+                <input type="submit" value="Entrar" id="enviar">
+            </form>
+    </div>
+    </div>
 </body>
 </html>
